--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,13 +6,18 @@
     perspective: 62.5em;
 }
 
-.card h2 {
-    margin: 0;
-}
+.card .face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    background-color: white;
 
-.card .pokemon-id {
-    display: block;
-    font-size: small;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transform: rotateY(0deg);
 }
 
 .card-flip {
