Add card flip animation functionality

--- a/src/components/Pokemon/PokemonTypesList/PokemonTypesList.css
+++ b/src/components/Pokemon/PokemonTypesList/PokemonTypesList.css
@@ -10,6 +10,7 @@
     margin: 0.25em;
     padding: 0.25em 0.8em;
     color: white;
+    font-size: 0.8rem;
     font-weight: 600;
     text-transform: lowercase;
     background-color: dimgrey;
