--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,5 @@
 .card {
+    position: relative;
     display: inline-block;
     padding: 0.5em;
     border: solid 0.0625em silver;
@@ -6,7 +7,7 @@
     perspective: 62.5em;
 }
 
-.card .face {
+.face {
     position: absolute;
     top: 0;
     left: 0;
@@ -31,4 +32,20 @@
 
     transition: transform 0.6s ease-out;
     transform-style: preserve-3d;
+}
+
+.card--showback > .card-flip {
+    transform: rotateY(180deg);
+}
+
+.flipcard-toggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    background: none;
+    border: none;
+    -webkit-appearance: none;
 }
