--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 1em;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
         "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -22,6 +22,14 @@ body {
 
 [hidden] {
     display: none !important;
+}
+
+h1,
+h2,
+h3,
+caption,
+th {
+    font-weight: 600;
 }
 
 .visually-hidden:not(:focus):not(:active) {
